# DataAnalysisFromSimulations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DetectionPerformance/: DPData.cpp  DPData.h  DPDataCreator.cpp  DPDataCreator.h  README.md  Run.cpp
DetectionPerformance/BRULCalculator/: BRUL.cpp  BRUL.h  BRULPrinter.h  CMakeLists.txt  Run.cpp
DetectionPerformance/DPModels/: EfficiencyCounter.cpp  EfficiencyCounter.h  EfficiencyPolarizationCounter.cpp  EfficiencyPolarizationCounter.h
DetectionPerformance/EfficiencyPlotter/: PlotEfficiency.cpp  PlotEfficiency.h  Run.cpp
DetectionPerformance/EnergyCutsPlotter/: CMakeLists.txt  Run.cpp
NEMAControlHistograms/: CMakeLists.txt  README.md  Run.cpp
StudyOfRelativeEfficiency/: CMakeLists.txt  README.md  REAnalysis.h  REAnalysis_AnalysisMethods.cpp  REAnalysis_StandardMethods.cpp  REData.cpp  REData.h  REDataCreator.cpp  REDataCreator.h  Run.cpp
StudyOfRelativeEfficiency/examples/example_1/: example1.sh
StudyOfRelativeEfficiency/examples/example_2/: example2.sh  parameters.txt
TXTConverters/: README.md
TXTConverters/TXTConverterGATE/: CMakeLists.txt  Run.cpp  TXTData.cpp  TXTData.h  TXTDataCreator.cpp  TXTDataCreator.h
TXTConverters/TXTConverterGATE/TXTModels/: TXTModel.cpp  TXTModel.h  ThreeHitsPerEventModel.cpp  ThreeHitsPerEventModel.h  TwoAnnihilationsHitsPerEventModel.cpp  TwoAnnihilationsHitsPerEventModel.h  TwoAnnihilationsHitsPerEventTimeSmearedModel.cpp  TwoAnnihilationsHitsPerEventTimeSmearedModel.h
TXTConverters/TXTConverterGeant4/: CMakeLists.txt  README.md  Run.cpp  TXTModelReader.cpp  TXTModelReader.h
TXTConverters/TXTConverterGeant4/TXTModels/: AnnihilationGammaPairsModel.cpp  AnnihilationGammaPairsModel.h  TXTModel.cpp  TXTModel.h  ThreeHitsEventsOnlyModel.cpp  ThreeHitsEventsOnlyModel.h
Tools/: README.md
Tools/CalibrationFiles/1_RUN/: EffVelocitiesRun1.txt  TimeCalib_Run1_Collim.txt
Tools/CalibrationFiles/2_RUN/: TimeCalib_Run2_RefDet.txt  TimeCalib_Run2_RefDetTDCCorr.txt
Tools/CalibrationFiles/3_RUN/: TimeCalib_Run3_RefDet.txt  TimeCalib_Run3_RefDetTDCCorr.txt
Tools/CalibrationFiles/5_RUN/: TOTConfigRun5Before.root  TimeCalib_Run5_RefDetTDCCorr.txt
Tools/CalibrationFiles/Run1/thresholds_run1/: afterRemount5.db
Tools/CalibrationFiles/Run2/timeCalibrationNOTDC/: TimeConstants_Run2.txt
Tools/CalibrationFiles/Run4/timeCalibrationNOTDC/: TimeConstansCalib_Run4TOTcut.txt  TimeConstantsCalib_r4_reversed.txt
Tools/CalibrationFiles/Run4/velocityCalibration/: resultsForThresholdc.txt
Tools/CalibrationFiles/Run5/TOTcorrection/: README~
Tools/Imaging/: userParams.json
Tools/JPET_Tools/: CMakeLists.txt
Tools/JPET_Tools/CalibrationFiles/1_RUN/: TimeCalib_Run1_RefDet.txt
Tools/JPET_Tools/CalibrationFiles/2_RUN/: EffVelocitiesRun2.txt
Tools/JPET_Tools/CalibrationFiles/3_RUN/: EffVelocitiesRun3.txt
Tools/JPET_Tools/CalibrationFiles/5_RUN/: EffVelocitiesRun5.txt  TOTConfigRun5After.root  TimeCalib_Run5_RefDet.txt
Tools/JPET_Tools/CalibrationFiles/Run1/timeCalibrationNOTDC/: TimeConstants_Run1.txt
Tools/JPET_Tools/CalibrationFiles/Run2/timeCalibrationTDCCorrected/: TimeConstantsCalibTDCcorr_RUN2.txt
Tools/JPET_Tools/CalibrationFiles/Run3/detectorSetup/: detectorSetupRun2345.json
Tools/JPET_Tools/CalibrationFiles/Run4/thresholds_run4/: 11_syncAcrossThreshold.db
Tools/JPET_Tools/CalibrationFiles/Run4/timeCalibrationNOTDC/: README  README~  TimeConstansCalib_Run4all.txt
Tools/JPET_Tools/CalibrationFiles/Run4/timeCalibrationTDCCorrected/: TimeConstantsCalibTDCcorr_RUN4.txt
Tools/JPET_Tools/CalibrationFiles/Run5/TOTcorrection/: README
Tools/JPET_Tools/LargeBarrelAnalysis/: userParams.json
Tools/JPET_Tools/ParametersReader/: ParametersReader.cpp
Tools/JPET_Tools/PlanesAngleAnalysis/: AnalysisData.h  CMakeLists.txt  EventCategorizer.cpp  EventCategorizer.h  Filter.cpp  FilterCorrectedTime.h  FilterCorrectedTimeDiff41.h  FilterEffectiveTime.cpp  FilterEffectiveTime.h  FilterHitsPerEvent.cpp  FilterHitsPerEvent.h  FilterHitsSpatialDistance.h  FilterLambdaFor3rdHit.cpp  FilterLambdaFor3rdHit.h  FilterLambdaFor4thHit.cpp  FilterParallerPrimeGammas.cpp  FilterSecondariesAlwaysSmaller.h  FilterTOTRange.cpp  FilterTOTRange.h  FilterThetaFor3rdHit.h  FilterThetaFor4thHit.cpp  FilterThetasSums.h  main.cpp
Tools/JPET_Tools/ToolsForAnalysis/: AnalysisClass.cpp  AnalysisData.cpp  AnalysisDataCreatorClass.cpp  AnalysisDataCreatorClass.h
Tools/JPET_Tools/ToolsForGATE/GGA_To_JPET_Converter/: Run.cpp
Tools/JPET_Tools/ToolsForGATE/GlobalActorReader/: CMakeLists.txt  GlobalActorReader.cpp
Tools/JPET_Tools/ToolsForROOT/: RandomGenerator.h  ReadAndSave.h
Tools/JPET_Tools/j-pet-framework/: CMakeLists.txt
Tools/LargeBarrelAnalysis/: EventFinder.cpp
Tools/ParametersReader/: ParametersReader.h
Tools/PlanesAngleAnalysis/: AnalysisData.cpp  Filter.h  FilterComptonThetaAngle.cpp  FilterComptonThetaAngle.h  FilterCorrectedTime.cpp  FilterCorrectedTimeDiff41.cpp  FilterHitsSpatialDistance.cpp  FilterLambdaFor4thHit.h  FilterMinimumHitsPerEvent.cpp  FilterMinimumHitsPerEvent.h  FilterParallerPrimeGammas.h  FilterReferenceTime.cpp  FilterReferenceTime.h  FilterSecondariesAlwaysSmaller.cpp  FilterThetaFor3rdHit.cpp  FilterThetaFor4thHit.h  FilterThetasSums.cpp  FiltersManager.cpp  FiltersManager.h
Tools/ToolsForAnalysis/: AnalysisClass.h  AnalysisData.h  AnalysisDataCreatorClass.cpp  AnalysisDataCreatorClass.h
Tools/ToolsForG4MC/: CMakeLists.txt  Run.cpp
Tools/ToolsForG4MC/G4MCHitData/: G4MCHitData.cpp  G4MCHitData.h
Tools/ToolsForG4MC/G4MCReader/: G4MCReader.cpp  G4MCReader.h
Tools/ToolsForGATE/: README.md
Tools/ToolsForGATE/GGA_To_JPET_Converter/: CMakeLists.txt
Tools/ToolsForGATE/GlobalActorReader/: CMakeLists.txt  GlobalActorReader.cpp  GlobalActorReader.h  README.md  Run.cpp  Variable.h
Tools/ToolsForGATE/GlobalActorReader/Converter/: Event.cpp  Event.h  EventLinkDef.h  GlobalActorConverter.cpp
Tools/ToolsForROOT/: HistogramsCreator.cpp  HistogramsCreator.h  Message.cpp  Message.h  README.md  RandomGenerator.cpp  RandomGenerator.h  ReadAndSave.cpp
(+28 files in other folders)
